--- a/index.html
+++ b/index.html
@@ -10,41 +10,28 @@
 
     <title>Port</title>
   </head>
-
+<img src="img/arrow.png" class="logo"alt="">
   <body>
     <nav>
       <ul>
-        <li><a href="#contact">contact</a></li>
-        <li>works</li>
-        <li>experience</li>
-        <li class="empty"></li>
-        <li>behance</li>
-        <li>twitter</li>
-        <li>linkedin</li>
+        <li><a href="#contact"></a></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li class ="circle"></li>
       </ul>
     </nav>
     <header>
-      <div class="container">
-  <div class="row">
-    <!-- left-column -->
-      <div class="col-sm">
-        <h1>Hi, I'm <br>Andres Saavedra</h1>
-        <ul>
-          <li>UI Designer and photographer</li>
-          <li>8 years experience  </li>
-          <li>Collaborating with many startups and fortune 500 companies</li>
-        </ul>
-        <a href="#" class="button">Add me on linkedin</a>
+
+      <div class="wrapper">
+
+        <img src="img/coolset.png" alt="me">
+        <h2><span></span><br>My name is Andres<br>
+          Pleased to meet you</h2>
       </div>
 
-      <div class="col-sm">
-      <figure>
-        <img src="img/yous.jpg" alt="me">
-        <figcaption>Photo by me</figcaption>
-      </figure>
-    </div>
-  </div>
-  </div>
+
     </header>
 
     <section >
