--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <title>Port</title>
   </head>
-<img src="img/arrow.png" class="logo"alt="">
   <body>
     <nav>
+      <img src="img/arrow.png" class="logo"alt="">
       <ul>
         <li><a href="#contact"></a></li>
         <li></li>
@@ -23,13 +23,15 @@
       </ul>
     </nav>
     <header>
-
-      <div class="wrapper">
-
+      <div class="hero-image">
         <img src="img/coolset.png" alt="me">
-        <h2><span></span><br>My name is Andres<br>
-          Pleased to meet you</h2>
+
+        <div class="hero-text">
+          <h2><span></span><br>My name is Andres<br>
+            Pleased to meet you</h2>
+        </div>
       </div>
+    
 
 
     </header>
