--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
     <meta name="viewport" content="width=device-width, initital scale=1.0">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
       <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&family=Inknut+Antiqua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <title>Port</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <nav>
-      <img src="img/arrow.png" class="logo"alt="">
-      <ul>
-        <li><a href="#contact"></a></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li class ="circle"></li>
-      </ul>
+        <div class="logo">
+          <p>andres</p>
+        </div>
+        <div class="about">
+          <p>about</p>
+        </div>
     </nav>
     <header>
       <div class="hero-image">
@@ -31,94 +28,82 @@
             Pleased to meet you</h2>
         </div>
       </div>
-    
+
 
 
     </header>
 
     <section >
-      <ul class="skills-list">
-        <li>01_UI design</li>
-        <li>02_UX design</li>
-        <li>03_Photography</li>
-        <li>04_Motion design</li>
-      </ul>
+
+      <div class="work-image1">
+        <img src="img/coolset.png" alt="me">
+
+        <div class="work-text">
+          <h2><span></span><br>My name is Andres<br>
+            Pleased to meet you</h2>
+        </div>
+      </div>
+
     </section>
 
-    <!-- projects -->
-<!-- project 1 -->
-    <section class="project">
-      <div class="container">
-  <div class="row">
-    <!-- left-column -->
-      <div class="col-sm">
-      <figure>
-        <img src="img/cosmetics.jpg" alt="">
-        <figcaption class="right-alignment">Photo by me</figcaption>
+    <section >
 
-      </figure>
+      <div class="work-image1">
+        <img src="img/coolset.png" alt="me">
+
+        <div class="work-text">
+          <h2><span></span><br>My name is Andres<br>
+            Pleased to meet you</h2>
+        </div>
       </div>
-      <!-- right-column -->
-      <div class="col-sm">
-          <h2>branding <br>cosmetics</h2>
-          <p>Lorem ipsum dolor amet sartorial quinoa 3 wolf moon, tilde neutra succulents vegan kitsch church-key vaporware. Pork belly thundercats iPhone tilde 90’s ugh. Narwhal post-ironic VHS affogato subway tile. Everyday carry copper mug art party, blue bottle normcore banh mi gastropub lomo fingerstache four dollar toast single-origin coffee hell of 3 wolf moon palo santo kinfolk.
-          </p>
-          <a href="read normcore" class="button">read norm</a>
-      </div>
-    </div>
-</div>
+
     </section>
-    <!-- project 2 -->
-        <section class="project">
-          <div class="container">
-            <div class="row">
-              <!-- left-column -->
-            <div class="col-sm right-alignment">
-              <h2>branding <br>cosmetics</h2>
-              <p>Lorem ipsum dolor amet sartorial quinoa 3 wolf moon, tilde neutra succulents vegan kitsch church-key vaporware. Pork belly thundercats iPhone tilde 90’s ugh. Narwhal post-ironic VHS affogato subway tile. Everyday carry copper mug art party, blue bottle normcore banh mi gastropub lomo fingerstache four dollar toast single-origin coffee hell of 3 wolf moon palo santo kinfolk.
-              </p>
-                  <a href="read normcore" class="button">read norm</a>
-            </div>
-            <!-- right-column -->
-            <div class="col-sm">
-                <figure>
-                  <img src="img/cosmetics.jpg" alt="">
-                  <figcaption>Photo by me</figcaption>
-                </figure>
-            </div>
+
+    <section >
+
+      <div class="work-image1">
+        <img src="img/coolset.png" alt="me">
+
+        <div class="work-text">
+          <h2><span></span><br>My name is Andres<br>
+            Pleased to meet you</h2>
+        </div>
       </div>
-</div>
-        </section>
-        <!-- project 3 -->
-            <section class="project">
-              <div class="container">
-                <div class="row">
-                  <!-- left-column -->
-                <div class="col-sm">
-                  <figure>
-                    <img src="img/cosmetics.jpg" alt="">
-                    <figcaption class="right-alignment">Photo by me</figcaption>
 
-                  </figure>
-                </div>
-                  <!-- right-column -->
-                <div class="col-sm">
-                    <h2>branding <br>cosmetics</h2>
-                    <p>Lorem ipsum dolor amet sartorial quinoa 3 wolf moon, tilde neutra succulents vegan kitsch church-key vaporware. Pork belly thundercats iPhone tilde 90’s ugh. Narwhal post-ironic VHS affogato subway tile. Everyday carry copper mug art party, blue bottle normcore banh mi gastropub lomo fingerstache four dollar toast single-origin coffee hell of 3 wolf moon palo santo kinfolk.
-                    </p>
-                    <a href="read normcore" class="button">read norm</a>
-                  </div>
-                </div>
-              </div>
+    </section>
+
+    <section >
+
+      <div class="work-image1">
+        <img src="img/coolset.png" alt="me">
+
+        <div class="work-text">
+          <h2><span></span><br>My name is Andres<br>
+            Pleased to meet you</h2>
+        </div>
+      </div>
+
+    </section>
+
+    <section >
+
+      <div class="work-image1">
+        <img src="img/coolset.png" alt="me">
+
+        <div class="work-text">
+          <h2><span></span><br>My name is Andres<br>
+            Pleased to meet you</h2>
+        </div>
+      </div>
+
+    </section>
 
 
-            </section>
 
-            <footer id="contact">
-            <h2>any questions?
-            find me here jane@jane.jane</h2>
-            <p>designed & developed by jane doe 2019
-</p>
+          <footer id="contact">
+            <h2>hello@<br>company.co</h2>
+            <p>designed & developed by andres designs 2020 in CA
+            </p>
           </footer>
   </body>
 </html>
