--- a/index.html
+++ b/index.html
@@ -5,105 +5,61 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initital scale=1.0">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
-      <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
-    <title>Portfolio</title>
+    <title>Andres Disenos</title>
   </head>
   <body>
-    <nav>
+    <nav class="fixed-nav-bar">
         <div class="logo">
-          <p>andres</p>
+          <a href="index.html"><p>ANDRES</p></a>
         </div>
-        <div class="about">
-          <p>about</p>
+        <div class="about" >
+          <a href="about.html"><p>ABOUT</p></a>
         </div>
     </nav>
     <header>
       <div class="hero-image">
-        <img src="img/coolset.png" alt="me">
-
+        <img src="img/gradient1a.png" alt="me"></div>
         <div class="hero-text">
-          <h2><span></span><br>My name is Andres<br>
-            Pleased to meet you</h2>
+          <h1><span></span><br>I'm Andres a<br>
+            Visual Designer</h1> <p>EXPLORE WORKS</p>
         </div>
+          </header>
+
+    <section class="project" >
+      <div class="mycontainer">
+        <a href="work1.html"><img src="img/Pattern1.jpg" alt=""></a>
+        <div class="overlay">
+    <div class="text">Hello World</div>
+  </div>
       </div>
 
-
-
-    </header>
-
-    <section >
-
-      <div class="work-image1">
-        <img src="img/coolset.png" alt="me">
-
-        <div class="work-text">
-          <h2><span></span><br>My name is Andres<br>
-            Pleased to meet you</h2>
-        </div>
+      <div class="mycontainer">
+            <img src="img/table.jpg" alt="">
+            <div class="overlay">
+        <div class="text">Hello World</div>
       </div>
+    </div>
+
+      <div class="mycontainer">
+        <img src="img/rooster.jpg" alt="">
+        <div class="overlay">
+    <div class="text">Hello World</div>
+      </div>
+    </div>
 
     </section>
-
-    <section >
-
-      <div class="work-image1">
-        <img src="img/coolset.png" alt="me">
-
-        <div class="work-text">
-          <h2><span></span><br>My name is Andres<br>
-            Pleased to meet you</h2>
-        </div>
-      </div>
-
-    </section>
-
-    <section >
-
-      <div class="work-image1">
-        <img src="img/coolset.png" alt="me">
-
-        <div class="work-text">
-          <h2><span></span><br>My name is Andres<br>
-            Pleased to meet you</h2>
-        </div>
-      </div>
-
-    </section>
-
-    <section >
-
-      <div class="work-image1">
-        <img src="img/coolset.png" alt="me">
-
-        <div class="work-text">
-          <h2><span></span><br>My name is Andres<br>
-            Pleased to meet you</h2>
-        </div>
-      </div>
-
-    </section>
-
-    <section >
-
-      <div class="work-image1">
-        <img src="img/coolset.png" alt="me">
-
-        <div class="work-text">
-          <h2><span></span><br>My name is Andres<br>
-            Pleased to meet you</h2>
-        </div>
-      </div>
-
-    </section>
-
-
-
-          <footer id="contact">
-            <h2>hello@<br>company.co</h2>
-            <p>designed & developed by andres designs 2020 in CA
-            </p>
-          </footer>
+    <section class="foo">
+<div class="foo1">
+            <h2>andresvdr<br>@gmail.com</h2>
+</div>
+<div class="foo2">
+            <p>Thank you for stopping by! Now that you’ve seen my work let’s connect.</p>
+</div>
+<div class="foo3">
+            <p>LN. DR.</p>
+</div>
+        </section>
   </body>
 </html>
