--- a/index.html
+++ b/index.html
@@ -29,36 +29,38 @@
 
     <section class="project" >
       <div class="mycontainer">
-        <a href="work1.html"><img src="img/Pattern1.jpg" alt=""></a>
+        <img src="img/Pattern1.jpg" alt="">
         <div class="overlay">
-    <div class="text">Hello World</div>
+    <a href="work1.html"><div class="text">Dana Rubin</div></a>
   </div>
       </div>
 
       <div class="mycontainer">
             <img src="img/table.jpg" alt="">
             <div class="overlay">
-        <div class="text">Hello World</div>
+        <div class="text">Argos Design</div>
       </div>
     </div>
 
       <div class="mycontainer">
         <img src="img/rooster.jpg" alt="">
         <div class="overlay">
-    <div class="text">Hello World</div>
+    <div class="text">Sinergia NGO</div>
       </div>
     </div>
 
     </section>
     <section class="foo">
 <div class="foo1">
-            <h2>andresvdr<br>@gmail.com</h2>
+            <a href="mailto:andresvdes@outlook.com">
+            <h2>andresvdes@<br>outlook.com</h2></a>
 </div>
 <div class="foo2">
-            <p>Thank you for stopping by! Now that you’ve seen my work let’s connect.</p>
+            <p>Thank you for stopping by! Like what you see? Then please let us connect.</p>
 </div>
 <div class="foo3">
-            <p>LN. DR.</p>
+
+            <p><a href="https://linkedin.com/in/andresvdes">LN.</a> <a href="https://dribbble.com/andresvdes">DR.</a></p>
 </div>
         </section>
   </body>
