--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </div>
 <div class="foo3">
 
-            <p><a href="https://linkedin.com/in/andresvdes">LN.</a> <a href="https://dribbble.com/andresvdes">DR.</a></p>
+            <p><a href="https://www.linkedin.com/in/andresvdes/">LN.</a> <a href="https://dribbble.com/andresvdes">DR.</a></p>
 </div>
         </section>
   </body>
