--- a/work1.html
+++ b/work1.html
@@ -121,8 +121,8 @@
         <!-- right-column -->
 
         <div class="col">
-          <h2 class="abouttitle">Argos <br> Design Co.</h2>
-            <p>Hi there and welcome! My name is Andres and I’m a visual designer with eight years of experience making digital products and services. I’ve a background working with organizations in the communication, media, and software development fields, from scrappy startups, non-profits, to established large companies. Nowadays I’m passionate about exploring visual styles and am a budding UI animator, web and brand designer. I’m committed to connecting my clients with their desired aesthetic and develop their brand.</p>
+          <h2 class="abouttitle">Dana<br>Rubin</h2>
+            <p>Dana Rubin is a Bay Area illustrator. Her style can be described as whimsical, independent and outdoorsy.</p>
         </div>
         </div>
       </div>
