--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Andres Disenos</title>
+    <title>Andres Designs</title>
   </head>
   <body>
     <nav class="fixed-nav-bar">
@@ -29,21 +29,21 @@
 
     <section class="project" >
       <div class="mycontainer">
-        <img src="img/Pattern1.jpg" alt="">
+        <img src="img/Pattern1a.jpg" alt="">
         <div class="overlay">
     <a href="work1.html"><div class="text">Dana Rubin</div></a>
   </div>
       </div>
 
       <div class="mycontainer">
-            <img src="img/table.jpg" alt="">
+            <img src="img/table1a.jpg" alt="">
             <div class="overlay">
         <div class="text">Argos Design</div>
       </div>
     </div>
 
       <div class="mycontainer">
-        <img src="img/rooster.jpg" alt="">
+        <img src="img/rooster1a.jpg" alt="">
         <div class="overlay">
     <div class="text">Sinergia NGO</div>
       </div>
