--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="mycontainer">
         <img src="img/Pattern1a.jpg" alt="">
         <div class="overlay">
-    <a href="work1.html"><div class="text">Dana Rubin</div></a>
+    <a href="argos.html"><div class="text">Dana Rubin</div></a>
   </div>
       </div>
 
