--- a/about.html
+++ b/about.html
@@ -25,16 +25,16 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col right-alignment">
-          <h2 class="abouttitle">Let’s
+          <h1>Let’s
             <br>explore
-            <br>together</h2>
+            <br>together</h1>
             <p>Hi there and welcome! My name is Andres and I’m a visual designer with eight years of experience making digital products and services. I’ve a background working with organizations in the communication, media, and software development fields, from scrappy startups, non-profits, to established large companies. Nowadays I’m passionate about exploring visual styles and am a budding UI animator, web and brand designer. I’m committed to connecting my clients with their desired aesthetic and develop their brand.</p>
         </div>
         <!-- right-column -->
-        <div class="col imgcol">
-            <figure>
-              <img src="img/coolset.png" alt="">
-            </figure>
+        <div class="col">
+          <div>
+              <img src="img/man.jpg" alt="">
+            </div>
         </div>
         </div>
       </div>
@@ -44,10 +44,10 @@
       <div class="container">
   <div class="row myrow2">
     <!-- left-column -->
-      <div class="col imgcol">
-      <figure>
-        <img src="img/band.jpg" alt="">
-      </figure>
+      <div class="col">
+        <div>
+        <img src="img/man.jpg" alt="">
+</div>
       </div>
       <!-- right-column -->
       <div class="col">
@@ -68,25 +68,27 @@
               <p>I’m currently available to take on freelance work and always willing to explore contract or long-term positions with the right team. Download resume.</p>
             </div>
             <!-- right-column -->
-            <div class="col imgcol">
-                <figure>
-                  <img src="img/sunset.jpg" alt="">
-                </figure>
+            <div class="col">
+              <div>
+                <img src="img/skills.png" alt="">
+                            </div>
             </div>
       </div>
 </div>
         </section>
         <section class="foo">
-    <div class="foo1">
-                <h2>andres@<br>company.co</h2>
-    </div>
-    <div class="foo2">
-                <p>Thank you for stopping by! Now that you’ve seen my work let’s connect.</p>
-    </div>
-    <div class="foo3">
-                <p>LN. DR.</p>
-    </div>
-            </section>
+              <div class="foo1">
+                <a href="mailto:andresvdes@outlook.com">
+                <h1>andresvdes@<br>outlook.com</h1></a>
+              </div>
+              <div class="foo2">
+                <p>Thank you for stopping by! Like what you see? Then please let us connect.</p>
+              </div>
+              <div class="foo3">
+
+                <p><a href="https://www.linkedin.com/in/andresvdes/">LN.</a> <a href="https://dribbble.com/andresvdes">DR.</a></p>
+              </div>
+          </section>
 
   </body>
 </html>
