--- a/dana.html
+++ b/dana.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Argos Design</title>
+    <title>Dana Rubin</title>
   </head>
   <body>
     <nav class="fixed-nav-bar">
@@ -25,8 +25,8 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-          <h1>Argos<br> Design</h1>
-          <p>Argos Design is a boutique design studio that creates hand crafted custom commercial furniture clients across the U.S.</p>
+          <h1>Dana <br> Rubin</h1>
+          <p>Dana Rubin is a Bay Area illustrator. Her style can be described as whimsical, independent and outdoorsy.</p>
         </div>
         <!-- right-column -->
         <div class="col">
@@ -42,7 +42,7 @@
         <!-- right-column -->
         <div class="col">
             <figure>
-              <img src="img/table1a.jpg" alt="">
+              <img src="img/pattern1.jpg" alt="">
             </figure>
         </div>
         </div>
@@ -72,7 +72,7 @@
         <!-- long-column -->
         <div class="col">
             <figure>
-              <img src="img/argos1.jpg" alt="">
+              <img src="img/danashot.jpg" alt="">
             </figure>
         </div>
         </div>
@@ -102,7 +102,7 @@
         <!-- long-column -->
         <div class="col">
             <figure>
-              <img src="img/argos2.jpg" alt="">
+              <img src="img/danashot2.jpg" alt="">
             </figure>
         </div>
         </div>
@@ -114,17 +114,17 @@
         <div class="row myrow">
           <!-- left-column -->
           <div class="col">
-                <img src="img/argosaboutshot.jpg" alt="">
+                <img src="img/danashot2.jpg" alt="">
           </div>
         <!-- right-column -->
         <div class="col">
-          <img src="img/argosaboutshot.jpg" alt="">
+          <img src="img/danashot2.jpg" alt="">
         </div>
       </div>
     </section>
     <section>
 <div class="next-project">
-            <a href="sinergia.html">NEXT PROJECT</a>
+            <a href="argos.html">NEXT PROJECT</a>
 </div>
 </section>
   </body>
