--- a/index.html
+++ b/index.html
@@ -31,37 +31,37 @@
       <div class="mycontainer">
         <img src="img/Pattern1a.jpg" alt="">
         <div class="overlay">
-    <a href="argos.html"><div class="text">Dana Rubin</div></a>
+    <a href="dana.html"><div class="text">Dana Rubin</div></a>
   </div>
       </div>
 
       <div class="mycontainer">
             <img src="img/table1a.jpg" alt="">
             <div class="overlay">
-        <div class="text">Argos Design</div>
+          <a href="argos.html"><div class="text">Argos Design</div></a>
       </div>
     </div>
 
       <div class="mycontainer">
         <img src="img/rooster1a.jpg" alt="">
         <div class="overlay">
-    <div class="text">Sinergia NGO</div>
+            <a href="sinergia.html"><div class="text">Sinergia NGO</div></a>
       </div>
     </div>
 
     </section>
     <section class="foo">
-<div class="foo1">
+          <div class="foo1">
             <a href="mailto:andresvdes@outlook.com">
-            <h2>andresvdes@<br>outlook.com</h2></a>
-</div>
-<div class="foo2">
+            <h1>andresvdes@<br>outlook.com</h1></a>
+          </div>
+          <div class="foo2">
             <p>Thank you for stopping by! Like what you see? Then please let us connect.</p>
-</div>
-<div class="foo3">
+          </div>
+          <div class="foo3">
 
             <p><a href="https://www.linkedin.com/in/andresvdes/">LN.</a> <a href="https://dribbble.com/andresvdes">DR.</a></p>
-</div>
+          </div>
         </section>
   </body>
 </html>
