--- a/dana.html
+++ b/dana.html
@@ -42,7 +42,7 @@
         <!-- right-column -->
         <div class="col">
             <figure>
-              <img src="img/pattern1.jpg" alt="">
+              <img src="img/pattern1a.jpg" alt="">
             </figure>
         </div>
         </div>
