--- a/dana.html
+++ b/dana.html
@@ -41,7 +41,9 @@
       <div class="container">
         <!-- right-column -->
         <div class="col">
+            <figure>
               <img src="img/pattern1a.jpg" alt="">
+            </figure>
         </div>
         </div>
 
