--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <!-- right-column -->
         <div class="col">
           <div>
-              <img src="img/man.jpg" alt="">
+              <img src="img/me.jpg" alt="">
             </div>
         </div>
         </div>
@@ -46,13 +46,13 @@
     <!-- left-column -->
       <div class="col">
         <div>
-        <img src="img/man.jpg" alt="">
+        <img src="img/trees.jpg" alt="">
 </div>
       </div>
       <!-- right-column -->
       <div class="col">
           <h2 >Interests</h2>
-          <p>I have strong interests in education, altruism, economic empowerment and ecological stewardship. I get excited about projects that allow me to solve design problems while maintaining a focus on ethics, diversity and inclusion. I’m always teaching myself any skill necessary to bring ideas to fruition and I’m not afraid to explore and fail. From a young age I was always attracted to the intersection of technology and the arts. I’ve been creating, drawing and writing in some shape or form since grade school but recently reignited my passion for digital design. I also developed a love for dance, partner and solo, through cuban salsa, urban/funk, and afro beats which led me to create and perform dance choreographies in the bay area.</p>
+          <p>I have strong passion for the arts but I also care about education, altruism, economic empowerment and ecological stewardship. I get excited about projects that allow me to solve design problems while maintaining a focus on ethics, diversity and inclusion. I’m always teaching myself any skill necessary to bring ideas to fruition and I’m not afraid to explore and fail. I’ve been creating content in some shape or form since grade school but recently reignited my passion for digital design. I also have a love for dance and have performed around the Bay Area. You can find me grooving and creating choreographies to cuban salsa, dancehall, urban/funk or afro beats :)</p>
       </div>
     </div>
 </div>
@@ -70,7 +70,7 @@
             <!-- right-column -->
             <div class="col">
               <div>
-                <img src="img/skills.png" alt="">
+                <img src="" alt="">
                             </div>
             </div>
       </div>
