--- a/argos.html
+++ b/argos.html
@@ -54,14 +54,16 @@
   <div class="row myrow">
     <!-- left-column -->
     <div class="col">
-        <p>I have strong interests in education, altruism, economic empowerment and ecological stewardship. I get excited about projects that allow me to solve design problems while maintaining a focus on ethics, diversity and inclusion. I’m always teaching myself any skill necessary to bring ideas to fruition and I’m not afraid to explore and fail. From a young age I was always attracted to the intersection of technology and the arts. I’ve been creating, drawing and writing in some shape or form since grade school but recently reignited my passion for digital design. I also developed a love for dance, partner and solo, through cuban salsa, urban/funk, and afro beats which led me to create and perform dance choreographies in the bay area.</p>
+      <h3>The Challenge</h3>
+      <p>The Argos Design studio founder, Cathy Dipietro, wanted a modern, sleek yet sensible website. She had previously worked with another agency to produce a logo, but wanted to overhaul her website and develop a brand identity across digital channels.
+The site needed to appeal to business owners, executives and office managers. As well as individuals interested in curating their home offices. With this in mind I decided to explore some furniture design blogs, trends, and websites to better understand the industry. </p>
     </div>
       <!-- right-column -->
       <div class="col">
           <h3 >Role:</h3>
-            <p>Visual Design</p>
-            <h3>Deliverables (ongoing):</h3>
-            <p>Brand strategy, Visual identity system, UI elements</p>
+            <p>Web and UI Design</p>
+            <h3>Deliverables:</h3>
+            <p>Visual Style Guide, Brand Strategy, Visual Mockup, and Web Development (on-going)</p>
       </div>
     </div>
 </div>
@@ -84,8 +86,10 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-          <h3>The challlenge and process </h3>
-            <p>Kale chips +1 synth dreamcatcher. Meh put a bird on it YOLO man braid, street art mlkshk listicle tousled woke kombucha literally. Master cleanse man bun cornhole raw denim. Marfa jean shorts artisan cardigan, street art pork belly pug 90's neutra copper mug schlitz listicle aesthetic. Gastropub craft beer irony, four dollar toast forage occupy schlitz typewriter mixtape.Gastropub craft beer irony, four dollar toast forage occupy.</p>
+          <h3>The Process </h3>
+          <p>I put together a design brief and worked with Cathy to iron out the details and requirements she deemed most important. Her main objective was making sure a user could easily contact her while navigating the site. I also had to incorporate the previously designed logo into the design, but Cathy was open to making adjustments and gave me free rein over the design direction.
+</p><p>From there we explored visual styles through a mood board which allowed me to hone in on her desired aesthetic. After some feedback on initial wireframes and visual mockups, we agreed on a final design for her site. I then went on to create a visual style guide for her to use on other digital channels in order to present a unified brand.
+</p>
         </div>
         <!-- right-column -->
         <div class="col">
