--- a/dana.html
+++ b/dana.html
@@ -26,7 +26,7 @@
           <!-- left-column -->
         <div class="col">
           <h1>Dana <br> Rubin</h1>
-          <p>Dana Rubin is a Bay Area illustrator. Her style can be described as whimsical, independent and outdoorsy.</p>
+          <p>Dana Rubin is an independent Bay Area illustrator. Her style can be described as joyful, whimsical, and free-form - inspired by nature and human expression.  All artwork proceeds go to various nonprofits and charities.</p>
         </div>
         <!-- right-column -->
         <div class="col">
@@ -42,7 +42,7 @@
         <!-- right-column -->
         <div class="col">
             <figure>
-              <img src="img/pattern1a.jpg" alt="">
+              <img src="img/pattern1.jpg" alt="">
             </figure>
         </div>
         </div>
@@ -54,14 +54,15 @@
   <div class="row myrow">
     <!-- left-column -->
     <div class="col">
-        <p>I have strong interests in education, altruism, economic empowerment and ecological stewardship. I get excited about projects that allow me to solve design problems while maintaining a focus on ethics, diversity and inclusion. I’m always teaching myself any skill necessary to bring ideas to fruition and I’m not afraid to explore and fail. From a young age I was always attracted to the intersection of technology and the arts. I’ve been creating, drawing and writing in some shape or form since grade school but recently reignited my passion for digital design. I also developed a love for dance, partner and solo, through cuban salsa, urban/funk, and afro beats which led me to create and perform dance choreographies in the bay area.</p>
+      <p>Dana approached me about creating a gallery hub her illustrations to be easily discovered by art enthusiasts and fellow artists. She wanted the site to present her illustrations with large images, allow users to easily contact her about custom orders, and she wanted her site to seamlessly connect to her e-commerce properties too.
+</p>
     </div>
       <!-- right-column -->
       <div class="col">
-          <h3 >Role:</h3>
-            <p>Visual Design</p>
-            <h3>Deliverables (ongoing):</h3>
-            <p>Brand strategy, Visual identity system, UI elements</p>
+          <p><strong >Role:</strong></p>
+            <p>Web and UI Design</p>
+            <p><strong>Deliverables:</strong></p>
+            <p>Visual identity system, UI elements, Visual Mockup, Web Development (on-going)</p>
       </div>
     </div>
 </div>
@@ -85,7 +86,8 @@
           <!-- left-column -->
         <div class="col">
           <h3>The challlenge and process </h3>
-            <p>Kale chips +1 synth dreamcatcher. Meh put a bird on it YOLO man braid, street art mlkshk listicle tousled woke kombucha literally. Master cleanse man bun cornhole raw denim. Marfa jean shorts artisan cardigan, street art pork belly pug 90's neutra copper mug schlitz listicle aesthetic. Gastropub craft beer irony, four dollar toast forage occupy schlitz typewriter mixtape.Gastropub craft beer irony, four dollar toast forage occupy.</p>
+          <p>We brainstormed some ideas and then I put together a design brief to capture her target audience, user personas, content and functionality requirements, and a basic sitemap. From there we put together a moodboard to capture her desired colors, aesthetic and visual feel. I followed up with two distinct wireframes and after some review we landed on a simple and clean grid design.
+</p>
         </div>
         <!-- right-column -->
         <div class="col">
