--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="img/gradient1a.png" alt="me"></div>
         <div class="hero-text">
           <h1><span></span><br>I'm Andres a<br>
-            Visual Designer</h1> <p>EXPLORE WORKS</p>
+            Visual Designer</h1> <p>PORTFOLIO WORK</p>
         </div>
           </header>
 
