--- a/sinergia.html
+++ b/sinergia.html
@@ -26,7 +26,7 @@
           <!-- left-column -->
         <div class="col">
           <h1>Sinergia<br>NGO</h1>
-          <p>Dana Rubin is a Bay Area illustrator. Her style can be described as whimsical, independent and outdoorsy.</p>
+          <p><a href="https://www.sinergiaanimal.org">Sinergia Animal</a> is an international animal protection organization working to end the worst practices of industrial animal agriculture.</p>
         </div>
         <!-- right-column -->
         <div class="col">
@@ -54,14 +54,14 @@
   <div class="row myrow">
     <!-- left-column -->
     <div class="col">
-        <p>I have strong interests in education, altruism, economic empowerment and ecological stewardship. I get excited about projects that allow me to solve design problems while maintaining a focus on ethics, diversity and inclusion. I’m always teaching myself any skill necessary to bring ideas to fruition and I’m not afraid to explore and fail. From a young age I was always attracted to the intersection of technology and the arts. I’ve been creating, drawing and writing in some shape or form since grade school but recently reignited my passion for digital design. I also developed a love for dance, partner and solo, through cuban salsa, urban/funk, and afro beats which led me to create and perform dance choreographies in the bay area.</p>
+        <p>I discovered them on 80000hours.org which reports on organizations that are helping to solve the most pressing global issues. I looked at their current site and immediately knew that I could provide some insight on their UX and visual design. I put together an unsolicited home page re-design and emailed their Communications director who agreed to work with me on their upcoming design efforts.</p>
     </div>
       <!-- right-column -->
       <div class="col">
           <h3 >Role:</h3>
-            <p>Visual Design</p>
-            <h3>Deliverables (ongoing):</h3>
-            <p>Brand strategy, Visual identity system, UI elements</p>
+            <p>UX/UI Design</p>
+            <h3>Deliverables:</h3>
+            <p>Home page mockup (re-design)</p>
       </div>
     </div>
 </div>
@@ -85,7 +85,8 @@
           <!-- left-column -->
         <div class="col">
           <h3>The challlenge and process </h3>
-            <p>Kale chips +1 synth dreamcatcher. Meh put a bird on it YOLO man braid, street art mlkshk listicle tousled woke kombucha literally. Master cleanse man bun cornhole raw denim. Marfa jean shorts artisan cardigan, street art pork belly pug 90's neutra copper mug schlitz listicle aesthetic. Gastropub craft beer irony, four dollar toast forage occupy schlitz typewriter mixtape.Gastropub craft beer irony, four dollar toast forage occupy.</p>
+            <p>The challenge was not knowing Sinergia’s business priorities. I looked at their mission statement and the read through their content which informed my overall design direction. I also went and looked at similar organizations, researched NPO/NGO trends and reviewed other sites.
+</p> <p>When you land on the home page, you can see that there are many items to click through and navigate from. I referred to some best UX practices to reduce the number of navigation items to ease complexity, created CTA buttons for their donation and volunteer pages and emphasized the human touch and the people behind this movement. </p>
         </div>
         <!-- right-column -->
         <div class="col">
@@ -97,7 +98,7 @@
       </div>
     </section>
 
-  
+
     <section>
 <div class="next-project">
             <a href="dana.html">NEXT PROJECT</a>
