--- a/dana.html
+++ b/dana.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/favad.svg" sizes="any" type="image/svg+xml">
+
     <title>Dana Rubin</title>
   </head>
   <body>
@@ -54,7 +56,7 @@
   <div class="row myrow">
     <!-- left-column -->
     <div class="col">
-      <p>Dana approached me about creating a gallery hub her illustrations to be easily discovered by art enthusiasts and fellow artists. She wanted the site to present her illustrations with large images, allow users to easily contact her about custom orders, and she wanted her site to seamlessly connect to her e-commerce properties too.
+      <p>Dana approached me about creating a gallery for her illustrations that would work as a launching pad to her e-commerce profiles where she sold her artwork. I was very impressed by her work and jumped on the project right away. I put together a web brief that would capture the requirements of her site and after some email exchanges we came up with a vision for her gallery.
 </p>
     </div>
       <!-- right-column -->
@@ -85,15 +87,13 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-          <h3>The challlenge and process </h3>
-          <p>We brainstormed some ideas and then I put together a design brief to capture her target audience, user personas, content and functionality requirements, and a basic sitemap. From there we put together a moodboard to capture her desired colors, aesthetic and visual feel. I followed up with two distinct wireframes and after some review we landed on a simple and clean grid design.
-</p>
+          <strong>The challlenge and process: </strong>
+<p>We determined that the target audience would be art enthusiasts who shop at places such as etsy and studio6 or collect things on Pinterest. As the priority, this meant providing the ability to quickly and easily sift through multiple works in one go. It was also very important to create a site that would elevate her work and not compete with it visually.</p>
         </div>
         <!-- right-column -->
         <div class="col">
-            <figure>
-              <img src="" alt="">
-            </figure>
+<p>We then worked together on a moodboard to capture her desired colors, aesthetic and visual feel. After some wireframe exploration, we landed on a grid style as the winning layout. From there I explored fonts and played with color hues, saturations and grays; as well as spacing and sizing of elements. I created a final mockup on Figma and now I’m exploring development platforms to host her site.
+</p>
         </div>
         </div>
       </div>
@@ -110,20 +110,6 @@
         </div>
     </section>
 
-
-    <section >
-      <div class="container">
-        <div class="row myrow">
-          <!-- left-column -->
-          <div class="col">
-                <img src="img/danashot2.jpg" alt="">
-          </div>
-        <!-- right-column -->
-        <div class="col">
-          <img src="img/danashot2.jpg" alt="">
-        </div>
-      </div>
-    </section>
     <section>
 <div class="next-project">
             <a href="argos.html">NEXT PROJECT</a>
