--- a/sinergia.html
+++ b/sinergia.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Sinergia NGO</title>
+    <link rel="icon" href="img/favad.svg" sizes="any" type="image/svg+xml">
+<title>Sinergia NGO</title>
   </head>
   <body>
     <nav class="fixed-nav-bar">
@@ -54,7 +55,7 @@
   <div class="row myrow">
     <!-- left-column -->
     <div class="col">
-        <p>I discovered them on 80000hours.org which reports on organizations that are helping to solve the most pressing global issues. I looked at their current site and immediately knew that I could provide some insight on their UX and visual design. I put together an unsolicited home page re-design and emailed their Communications director who agreed to work with me on their upcoming design efforts.</p>
+        <p>I discovered them on 80000hours.org which reports on organizations that are helping to solve the most pressing global issues. I looked at their current site and immediately knew that I could provide some insight on their UX and visual design. I put together an unsolicited home page re-design and emailed their Communications director who was happy with my work and she agreed to collaborate with me on a project starting August 2020.</p>
     </div>
       <!-- right-column -->
       <div class="col">
@@ -86,7 +87,7 @@
         <div class="col">
           <h3>The challlenge and process </h3>
             <p>The challenge was not knowing Sinergia’s business priorities. I looked at their mission statement and the read through their content which informed my overall design direction. I also went and looked at similar organizations, researched NPO/NGO trends and reviewed other sites.
-</p> <p>When you land on the home page, you can see that there are many items to click through and navigate from. I referred to some best UX practices to reduce the number of navigation items to ease complexity, created CTA buttons for their donation and volunteer pages and emphasized the human touch and the people behind this movement. </p>
+</p> <p>When you land on the home page, you can see that there are many items to click through and navigate from. I referred to some best UX practices to reduce the number of navigation items to ease complexity, created CTA buttons for their donation and volunteer pages and visually emphasized the human touch and the people behind this movement. </p>
         </div>
         <!-- right-column -->
         <div class="col">
