--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/favad.svg" sizes="any" type="image/svg+xml">
+
     <title>About</title>
   </head>
   <body>
@@ -70,7 +72,7 @@
             <!-- right-column -->
             <div class="col">
               <div>
-                <img src="" alt="">
+                <img src="img/skills1.png" alt="">
                             </div>
             </div>
       </div>
