--- a/argos.html
+++ b/argos.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Argos Design</title>
+    <link rel="icon" href="img/favad.svg" sizes="any" type="image/svg+xml">
+  <title>Argos Design</title>
   </head>
   <body>
     <nav class="fixed-nav-bar">
@@ -26,7 +27,8 @@
           <!-- left-column -->
         <div class="col">
           <h1>Argos<br> Design</h1>
-          <p>Argos Design is a boutique design studio that creates hand crafted custom commercial furniture clients across the U.S.</p>
+          <p>Argos Design is a boutique furniture manufacturing and design studio crafting custom pieces for individual and commercial clients across the U.S.
+</p>
         </div>
         <!-- right-column -->
         <div class="col">
@@ -54,15 +56,14 @@
   <div class="row myrow">
     <!-- left-column -->
     <div class="col">
-      <h3>The Challenge</h3>
-      <p>The Argos Design studio founder, Cathy Dipietro, wanted a modern, sleek yet sensible website. She had previously worked with another agency to produce a logo, but wanted to overhaul her website and develop a brand identity across digital channels.
-The site needed to appeal to business owners, executives and office managers. As well as individuals interested in curating their home offices. With this in mind I decided to explore some furniture design blogs, trends, and websites to better understand the industry. </p>
+      <strong>The Brief</strong>
+      <p>The Argos Design studio founder, Cathy Dipietro, wanted to re-design her website and develop a brand identity that could be used on other mediums as well. During our initial chats, we both agreed on a new look and feel for the site: simple, modern, and confident - a reflection of Cathy’s personal style. We ironed out some other content and functional details, which I put into a digital brief and got to work.</p>
     </div>
       <!-- right-column -->
       <div class="col">
-          <h3 >Role:</h3>
+          <strong>Role:</strong>
             <p>Web and UI Design</p>
-            <h3>Deliverables:</h3>
+            <strong>Deliverables:</strong>
             <p>Visual Style Guide, Brand Strategy, Visual Mockup, and Web Development (on-going)</p>
       </div>
     </div>
@@ -86,11 +87,10 @@ The site needed to appeal to business owners, executives and office managers. As
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-          <h3>The Process </h3>
-          <p>I put together a design brief and worked with Cathy to iron out the details and requirements she deemed most important. Her main objective was making sure a user could easily contact her while navigating the site. I also had to incorporate the previously designed logo into the design, but Cathy was open to making adjustments and gave me free rein over the design direction.
-</p><p>From there we explored visual styles through a mood board which allowed me to hone in on her desired aesthetic. After some feedback on initial wireframes and visual mockups, we agreed on a final design for her site. I then went on to create a visual style guide for her to use on other digital channels in order to present a unified brand.
+          <strong>The Process </strong>
+          <p>Building on top of an initial logo designed by another agency, I developed a broader branding identity for Argos, creating a new color palette and design guidelines to help her communicate a unified voice on other digital channels. With the brief in hand, I created a sitemap and some initial wireframes to resemble our new vision. Once she approved, I went on to create a high fidelity visual mockup.
 </p>
-        </div>
+</div>
         <!-- right-column -->
         <div class="col">
             <figure>
@@ -122,7 +122,34 @@ The site needed to appeal to business owners, executives and office managers. As
           </div>
         <!-- right-column -->
         <div class="col">
-          <img src="img/argosaboutshot.jpg" alt="">
+          <strong>Color and Type</strong>
+          <p>The original mood board had some cooler tones such as dark blue, green and brown. I played with the saturation and brightness of those colors to create a color palette with blue as its main color, a secondary dark brown, a complementary shade of tan and some grays. Her original logo used the ‘Trueno’ a modern and geometric type, so I explored a complementary font and landed on Open Sans because of its softer feel.</p>
+
+        </div>
+      </div>
+    </section>
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+          <div class="col">
+              <figure>
+                <img src="img/argos1.jpg" alt=""></figure>
+          </div>
+        <!-- right-column -->
+
+      </div>
+    </section>
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+          <div class="col">
+                <img src="" alt="">
+          </div>
+        <!-- right-column -->
+        <div class="col">
+          <p>Overal the site’s design has come together pretty well and I have enjoyed helping the Argos Design brand grow. As my first project of 2020 I'm excited for the future opportunities this project will bring!</p>
         </div>
       </div>
     </section>
