--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/favad.svg" sizes="any" type="image/svg+xml">
     <title>Andres Designs</title>
   </head>
   <body>
@@ -19,12 +20,12 @@
         </div>
     </nav>
     <header>
-      <div class="hero-image">
-        <img src="img/gradient1a.png" alt="me"></div>
-        <div class="hero-text">
-          <h1><span></span><br>I'm Andres a<br>
-            Visual Designer</h1> <p>PORTFOLIO WORK</p>
-        </div>
+          <div>  </div>
+      <div class="container-fluid">
+        <div class=""><h1><span></span><br>I'm Andres a<br>Visual Designer</h1> </div>
+<img src="img/gradient1a.png" alt=""> <p>PORTFOLIO WORKS</p>
+
+    </div>
           </header>
 
     <section class="project" >
